--- a/css/listaTarefas.css
+++ b/css/listaTarefas.css
@@ -28,11 +28,10 @@
     font-size: 1.5rem;
 }
 
-.lista_tarefas_remover{
-    background-color: var(--vermelho);
-    border: none;
-    border-radius: 8px;
-    color: var(--branco);
+.icon_remover{
     margin-right: 1.5rem;
-    padding: .25rem .75rem;
+}
+
+.icon_remover:hover{
+    cursor: pointer;
 }
